<resources>
    <string name="app_name">Calculator</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnClr">ac</string>
    <string name="btnHistory">h</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnDiv">\u00F7</string>
    <string name="btnMul">\u0078</string>
    <string name="btnPercent">%</string>
    <string name="btnBack">\u232B</string>
    <string name="btnSign">+/-</string>
    <string name="eql">=</string>
    <string name="MemAdd">m+</string>
    <string name="MemSub">m-</string>
    <string name="MemClr">mc</string>
    <string name="MemRecal">mr</string>
    <string name="point">.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>